--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1517,8 +1517,7 @@
                 console.log('DEBUG: playStream called for', item.name || 'Unknown');
 
                 // Show Loader
-                const loader = document.querySelector('.player-loader');
-                if (loader) loader.style.display = 'flex';
+                document.getElementById('playerLoader').style.display = 'flex';
 
                 currentStreamUrl = null;
                 // Highlight
@@ -1561,7 +1560,7 @@
                             hls.on(Hls.Events.ERROR, (e, d) => {
                                 if (d.fatal) {
                                     showError("Stream connection lost");
-                                    if (loader) loader.style.display = 'none';
+                                    document.getElementById('playerLoader').style.display = 'none';
                                 }
                             });
                         } else if (els.video.canPlayType('application/vnd.apple.mpegurl')) {
@@ -1571,19 +1570,21 @@
 
                         // Hide loader when video starts playing
                         els.video.onplaying = () => {
-                            if (loader) loader.style.display = 'none';
+                            console.log('DEBUG: Video onplaying fired');
+                            document.getElementById('playerLoader').style.display = 'none';
                         };
                         // Show loader when buffering
                         els.video.onwaiting = () => {
-                            if (loader) loader.style.display = 'flex';
+                            console.log('DEBUG: Video onwaiting fired');
+                            document.getElementById('playerLoader').style.display = 'flex';
                         };
                     } else {
                         showError("Channel Offline (404)");
-                        if (loader) loader.style.display = 'none';
+                        document.getElementById('playerLoader').style.display = 'none';
                     }
                 } catch (e) {
                     showError("Connection Failed");
-                    if (loader) loader.style.display = 'none';
+                    document.getElementById('playerLoader').style.display = 'none';
                 }
 
                 // Render Server List (Sibling channels)
