Fix spinner CSS: use width/height instead of right/bottom, increase z-index

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -570,18 +570,18 @@
             }
         }
 
-        /* Player Loader */
+        /* Player Loader - positioned within player-area context */
         #playerLoader {
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.9);
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
             display: none;
             align-items: center;
             justify-content: center;
-            z-index: 15;
+            z-index: 50;
         }
 
 
